--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
             <div class="w-full max-w-xl">
                 <div class="flex-grow mx-auto">
                     <p class="text-neutral-500 mb-4 dark:text-neutral-400">Hi! I'm Miko!</p>
-                    <p class="text-neutral-500 mb-4 dark:text-neutral-400">I am currently a 4th year Computer Science student at the University of the Philippines Cebu.</p>
+                    <p class="text-neutral-500 mb-4 dark:text-neutral-400">I am a Computer Science graduate at the University of the Philippines Cebu.</p>
                     <p class="text-neutral-500 mb-4 dark:text-neutral-400">I like game development and data analytics.</p>
 
                 </div>
@@ -30,7 +30,7 @@
                     <div class="relative border-l border-neutral-300 dark:border-neutral-600 pl-8 mb-4 space-y-8">
                         <div class="relative">
                             <div class="absolute -left-[25px] h-4 w-4 rounded-full border-2 border-neutral-300 dark:border-neutral-500 bg-white dark:bg-neutral-900"></div>
-                            <p class="text-neutral-400 dark:text-neutral-500 text-sm mb-1">2021 - Present</p>
+                            <p class="text-neutral-400 dark:text-neutral-500 text-sm mb-1">2021 - 2025</p>
                             <p class="text-black dark:text-white font-medium">Bachelor of Science in Computer Science</p>
                             <p class="text-neutral-500 dark:text-neutral-400">University of the Philippines Cebu</p>
                         </div>
