--- a/pages/home.html
+++ b/pages/home.html
@@ -13,6 +13,19 @@
         <section class="w-full scroll-mt-24 mb-12" id="work">
             <div class="flex flex-col gap-8 group/wrapper">
                 <div class="w-full group/project mb-8 md:mb-0 lg:group-hover/wrapper:opacity-25 lg:hover:!opacity-100 transition-opacity">
+                    <a class="flex md:gap-0 gap-2 flex-col lg:flex lg:flex-row items-start relative group/link" href="https://github.com/debnoceda/PAHINgA" target="_blank" rel="noopener noreferrer">
+                        <div class="w-full lg:max-w-[calc((100%-432px)/2)] lg:sticky top-20 md:pr-8">
+                            <h3 class="text-lg font-semibold transition-colors md:group-hover/link:underline underline-offset-2">PAHINgA</h3>
+                            <p class="text-neutral-500 dark:text-neutral-400 mb-2 line-clamp-2">A mental health journaling app with AI-powered mood tracking and personalized insights.</p>
+                        </div>
+                        <div class="w-full relative">
+                            <div class="bg-neutral-100 dark:bg-neutral-900/70 overflow-hidden lg:h-auto flex items-center justify-center w-full md:px-8">
+                                <img class="relative md:h-auto md:object-scale-down md:object-center object-cover object-left" src="/images/Works/pahinga.png" alt="PAHINgA">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="w-full group/project mb-8 md:mb-0 lg:group-hover/wrapper:opacity-25 lg:hover:!opacity-100 transition-opacity">
                     <a class="flex md:gap-0 gap-2 flex-col lg:flex lg:flex-row items-start relative group/link" href="https://github.com/Mekuuuuu/siomeow-legends" target="_blank" rel="noopener noreferrer">
                         <div class="w-full lg:max-w-[calc((100%-432px)/2)] lg:sticky top-20 md:pr-8">
                             <h3 class="text-lg font-semibold transition-colors md:group-hover/link:underline underline-offset-2">Siomeow Legends</h3>
@@ -42,7 +55,7 @@
                     <a class="flex md:gap-0 gap-2 flex-col lg:flex lg:flex-row items-start relative group/link" href="https://github.com/liaminaki/HoneyOS" target="_blank" rel="noopener noreferrer">
                         <div class="w-full lg:max-w-[calc((100%-432px)/2)] lg:sticky top-20 md:pr-8">
                             <h3 class="text-lg font-semibold transition-colors md:group-hover/link:underline underline-offset-2">Honey0S</h3>
-                            <p class="text-neutral-500 dark:text-neutral-400 mb-2 line-clamp-2">An OS emulator with voice control, file management, and intuitive, tabbed navigation for smooth user interaction</p>
+                            <p class="text-neutral-500 dark:text-neutral-400 mb-2 line-clamp-2">An OS emulator with voice control, file management, and intuitive, tabbed navigation for smooth user interaction.</p>
                         </div><div class="w-full relative">
                             <div class="bg-neutral-100 dark:bg-neutral-900/70 overflow-hidden lg:h-auto flex items-center justify-center w-full md:px-8">
                                 <img class="relative md:h-auto md:object-scale-down md:object-center object-cover object-left" src="/images/Works/honey-os.png" alt="HoneyOS">
