--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                     <div>
                         <h4 class="font-semibold mb-3">Connect</h4>
                         <ul class="space-y-2">
-                            <li><a class="text-neutral-400 hover:text-neutral-600 transition-colors font-medium cursor-alias dark:text-neutral-600 dark:hover:text-neutral-400" href="https://www.facebook.com/miko.abadia/" target="_blank">Facebook</a></li>
-                            <li><a class="text-neutral-400 hover:text-neutral-600 transition-colors font-medium cursor-alias dark:text-neutral-600 dark:hover:text-neutral-400" href="https://www.linkedin.com/in/miko-tristan-abadia-541806305/" target="_blank">LinkedIn</a></li>
-                            <li><a class="text-neutral-400 hover:text-neutral-600 transition-colors font-medium cursor-alias dark:text-neutral-600 dark:hover:text-neutral-400" href="mailto:mikoabadia@gmail.com">Email</a></li>
-                            <li><a class="text-neutral-400 hover:text-neutral-600 transition-colors font-medium cursor-alias dark:text-neutral-600 dark:hover:text-neutral-400" href="https://github.com/Mekuuuuu" target="_blank">GitHub</a></li>
+                            <li><a class="text-neutral-400 hover:text-neutral-600 transition-colors font-medium cursor-alias dark:text-neutral-600 dark:hover:text-neutral-400" href="https://www.facebook.com/miko.abadia/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                            <li><a class="text-neutral-400 hover:text-neutral-600 transition-colors font-medium cursor-alias dark:text-neutral-600 dark:hover:text-neutral-400" href="https://www.linkedin.com/in/miko-tristan-abadia-541806305/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                            <li><a class="text-neutral-400 hover:text-neutral-600 transition-colors font-medium cursor-alias dark:text-neutral-600 dark:hover:text-neutral-400" href="https://mail.google.com/mail/?view=cm&fs=1&to=mikoabadia@gmail.com" target="_blank" rel="noopener noreferrer">Email</a></li>
+                            <li><a class="text-neutral-400 hover:text-neutral-600 transition-colors font-medium cursor-alias dark:text-neutral-600 dark:hover:text-neutral-400" href="https://github.com/Mekuuuuu" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                         </ul>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     <!-- <li><a class="text-neutral-400 transition-colors font-medium hover:text-neutral-600 dark:text-neutral-600 dark:hover:text-neutral-400" href="/imprint"> Imprint</a></li>
                     <li><a class="text-neutral-400 transition-colors font-medium hover:text-neutral-600 dark:text-neutral-600 dark:hover:text-neutral-400" href="/privacy-policy"> Privacy Policy</a></li> -->
                 </ul>
-                <p class="text-neutral-400 leading-none ml-1 dark:text-neutral-600">This portfolio website is heavily inspired by <a class="transition-colors font-medium hover:text-neutral-600 dark:hover:text-neutral-400" href="https://floriankiem.com" target="_blank">floriankiem.com</a></p>
+                <!-- <p class="text-neutral-400 leading-none ml-1 dark:text-neutral-600">This portfolio website is heavily inspired by <a class="transition-colors font-medium hover:text-neutral-600 dark:hover:text-neutral-400" href="https://floriankiem.com" target="_blank">floriankiem.com</a></p> -->
             </div>
         </footer>
     </div>
