--- a/pages/home.html
+++ b/pages/home.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section class="w-full bg-neutral-100 mb-12 dark:bg-[#101010]">
+        <!-- <section class="w-full bg-neutral-100 mb-12 dark:bg-[#101010]">
             <div class="overflow-hidden pt-16 max-w-4xl mx-auto md:px-8 px-5">
                 <h3 class="text-2xl font-semibold text-center md:mb-8">Get in Touch</h3>
                 <div class="w-full h-[616px] mt-20 relative flex items-end justify-center group/letter" style="perspective: 1000px;">
@@ -113,6 +113,6 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </div>
 </main>
